--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Lai Tat Hei (Teddy)"
-  avatar           : "profile.png"
+  avatar           : "Selfie.png"
   bio              : "Bachelor of Electronic and Information Engineering, The Hong Kong Polytechnic University"
   location         : "Hong Kong"
   employer         :
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :
+  linkedin         : "https://www.linkedin.com/in/tat-hei-lai-133524221/"
   orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
