--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Lai Tat Hei (Teddy)"
-  avatar           : "Selfie.png"
+  avatar           : "Selfie.jpg"
   bio              : "Bachelor of Electronic and Information Engineering, The Hong Kong Polytechnic University"
   location         : "Hong Kong"
   employer         :
