--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "Selfie.jpg"
   bio              : "Bachelor of Electronic and Information Engineering, The Hong Kong Polytechnic University"
   location         : "Hong Kong"
-  employer         : "Techtronic Industries Company Limited (Hong Kong)"
+  employer         : "TTI HK"
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : # "http://yourfullgooglescholarurl.com"
   email            : "k66115704@gmail.com"
