--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ social:
 analytics:
   provider               :  "google-universal" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          : G-7FFYE9DEJ8
+    tracking_id          : UA-237990656-1
 
 
 # Site Author
